# uitrace

./: CHANGELOG.md  README.md  draft.md  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-6-record-follow-any.txt  task-8-player-wait_until.txt
.sisyphus/notepads/2026-02-28-uitrace-mvp/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/notepads/publish-to-pypi-oidc/: decisions.md  issues.md  learnings.md
.sisyphus/plans/: 2026-02-28-uitrace-multi-window-capture.md  2026-02-28-uitrace-mvp.md  2026-03-01-uitrace-window-relative-replay.md  publish-to-pypi-oidc.md
src/uitrace/: __init__.py  cli.py  errors.py
src/uitrace/core/: __init__.py  jsonl.py  models.py
src/uitrace/platform/: __init__.py  base.py  macos.py  unsupported.py
src/uitrace/player/: __init__.py  executor.py  observer.py  (+1 more)
tests/: test_assertions_pure.py  test_cli_help.py  test_doctor_json.py  test_errors.py  test_executor_math.py  test_jsonl_io.py  test_list_json_schema.py  test_macos_centering_pure.py  test_models_roundtrip.py  test_platform_unsupported.py  test_play_command.py  test_play_multi_window_dry_run.py  test_player_assert_real.py  test_player_click_refresh_real.py  test_player_dry_run.py  test_player_wait_until_real.py  test_record_multi_window_pure.py  test_record_permissions_pure.py  test_record_pipeline_pure.py  test_recorder_merge.py  test_show_command.py  test_validate_command.py  test_window_hit_test_pure.py
tests/fixtures/: trace_v1_invalid.jsonl  trace_v1_multi_window.jsonl  trace_v1_valid.jsonl
(+9 files in other folders)
