[project]
name = "uitrace"
version = "0.2.0"
description = "UI trace tool for macOS: record and playback user interactions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "pyobjc>=12.1 ; sys_platform == 'darwin'",
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[project.scripts]
uitrace = "uitrace.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uitrace"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = false
